# torchtune

./: .coverage  .coverage.devgpu018.nha2.facebook.com.4043562.XBqicWxx  .flake8  .gitignore  .pre-commit-config.yaml  7B_full_cpu_offload.yaml  7B_full_paged_optim.yaml  =0.4.5  CITATION.cff  CONTRIBUTING.md  DESIGN_RFC.md  LICENSE  MANIFEST.in  Package_RFC.md  README.md  README_AMD.md  README_v25.5.md  RFC.md  benchmark.py  cli_design_rfc.md  config_ci.md  config_design.md  config_instantiation.md  coverage.xml  dataset.py  design_philosophy.md  dev-requirements.txt  dev.ipynb  e2e_user_flow.md  eval_round_2.md  export_flamingo.py  gemma.yaml  gemma_hf_checkpoint.safetensors  gemma_test.ipynb  generate.py  generate_test.py  grpo.sbatch  grpo_eval.sbatch  gsm8k_sft.sbatch  index.html  (+44 more)
.github/: PULL_REQUEST_TEMPLATE.md
0.0/: api_ref_config.html  api_ref_datasets.html  api_ref_models.html  api_ref_modules.html  api_ref_utilities.html  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  sg_execution_times.html
0.1/: api_ref_config.html  api_ref_data.html  api_ref_datasets.html  api_ref_models.html  api_ref_modules.html  api_ref_utilities.html  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  sg_execution_times.html
0.2/: api_ref_config.html  api_ref_data.html  api_ref_datasets.html  api_ref_models.html  api_ref_modules.html  api_ref_utilities.html  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js  sg_execution_times.html  tune_cli.html
0.3/: api_ref_config.html  api_ref_data.html  api_ref_datasets.html  api_ref_generation.html  api_ref_models.html  api_ref_modules.html  api_ref_rlhf.html  api_ref_training.html  api_ref_utilities.html  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js  sg_execution_times.html  tune_cli.html
0.4/: api_ref_config.html  api_ref_data.html  api_ref_datasets.html  api_ref_generation.html  api_ref_models.html  api_ref_modules.html  api_ref_rlhf.html  api_ref_training.html  api_ref_utilities.html  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js  sg_execution_times.html  tune_cli.html
0.5/: api_ref_config.html  api_ref_data.html  api_ref_datasets.html  api_ref_generation.html  api_ref_models.html  api_ref_modules.html  api_ref_rlhf.html  api_ref_training.html  api_ref_utilities.html  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js  sg_execution_times.html  tune_cli.html
0.6/: api_ref_config.html  api_ref_data.html  api_ref_datasets.html  api_ref_generation.html  api_ref_models.html  api_ref_modules.html  api_ref_rlhf.html  api_ref_training.html  api_ref_utilities.html  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js  sg_execution_times.html  tune_cli.html
_scripts/: __init__.py  convert_checkpoint.py  dist_convert.py  download.py  eval.py  ls.py  out
config/: finetune.yaml  finetune_dist.yaml
data/: my_data.csv  my_data.json  my_data.txt  validation_dataset_200.json
datasets/: system_prompt_compliance_v0.jsonl
dev/: gsm8k_utils.py
docs/: Makefile  out  requirements.txt
examples/: README.md  README.rst  inference.py  plot_the_best_example_in_the_world.py  run_llama_2_13B_LoRA.sh  run_llama_2_13B_full.sh  run_llama_2_70B_LoRA.sh  run_llama_2_70B_qLoRA  run_llama_2_7B_LoRA.sh  run_llama_2_7B_full.sh  run_llama_2_7B_qLoRA.sh  run_llama_3_1_70B_LoRA.sh  run_llama_3_1_70B_full.sh  run_llama_3_1_8B_LoRA.sh  run_llama_3_1_8B_full.sh  run_llama_3_2_1B_LoRA.sh  run_llama_3_2_1B_full.sh  run_llama_3_2_3B_LoRA.sh  run_llama_3_2_3B_full.sh  run_llama_3_2v_11B_LoRA.sh  run_llama_3_2v_11B_full.sh  run_llama_3_2v_11B_qLoRA.sh  run_llama_3_2v_90B_LoRA.sh  run_llama_3_2v_90B_full.sh  run_llama_3_2v_90B_qLoRA.sh  run_llama_3_3_LoRA.sh  run_llama_3_3_full.sh  run_llama_3_3_qLoRA.sh  run_llama_3_3_qLoRA_wiki.sh  run_llama_4_scout_17B_16E_full.sh  template_tutorial.py
integration_tests/: conftest.py  test_llama_inference_parity.py
llm/: generation.py
logs-Llama-2-7b-hf/: config.json
main/: api_ref_config.html  api_ref_data.html  api_ref_datasets.html  api_ref_generation.html  api_ref_models.html  api_ref_modules.html  api_ref_rlhf.html  api_ref_training.html  api_ref_utilities.html  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js  sg_execution_times.html  tune_cli.html
notes/: distributed.md  rl_plan.md
packing/: fifo_bins_packing.py  fifo_buffer_packing.py  fifo_buffer_packing_complete.py  sort_packing.py  test_harness.py
planning/: ontheflypacking.md
recipes/: README.md  __init__.py  _finetune_llm.py  adaptive_batching.rfc.md  alpaca_generate.py  args.py  base_lm.py  custom_eval.py  ddp_finetune_distributed.py  dora_finetune_single_device.py  dummy_config_test.yaml  eleuther_eval.py  eval_distributed.py  evaluate.py  federation.py  finetune_llm.py  full_continual_distributed_multi_dataset.py  full_continual_pretraining_distributed_multi_dataset.py  full_dpo_distributed.py  full_finetune.py  full_finetune_distributed.py  full_finetune_distributed_accelerate.py  full_finetune_distributed_multi_dataset.py  full_finetune_distributed_plus.py  full_finetune_distributed_w_quantization.py  full_finetune_hydra.py  full_finetune_multinode.slurm  full_finetune_single_device.py  full_finetune_single_device_perf_tools_showcase.py  full_knowledge_distillation_distributed.py  gemma_full_finetune_distributed.py  generate.py  generate_v2.py  grpo.py  grpo_distributed.py  grpo_finetune_single_device.py  grpo_full_finetune_distributed.py  grpo_full_finetune_single_device.py  interfaces.py  kd_distributed.py  (+44 more)
scripts/: 1B_lora_2500.sh  1B_lora_5000.sh  1B_lora_7500.sh  3B_lora_2500.sh  3B_lora_5000.sh  3B_lora_7500.sh  8B_lora_2500.sh  8B_lora_5000.sh  8B_lora_7500.sh  __init__.py  convert_checkpoint.py  convert_torchtune.py  convert_torchtune_old.py  download.py  grpo_skeleton.py  gsm8kdev.ipynb  log.txt  out  (+11 more)
(+2838 files in other folders)
